--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             <h3>Table Site</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
+        <a href="./estudos/Portifolio Melhorado/testenavbar.html" aria-describedby="link projeto com tabelas">
+            <h3>Teste Portifolio</h3>
+            <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
+        </a>
     </section>
 </body>
 </html>
