--- a/estudos/Portifolio Melhorado/testenavbar.html
+++ b/estudos/Portifolio Melhorado/testenavbar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Desenvolvedor fullstack especializado em .NET, React, Next.js e TypeScript. Confira meu portfólio com projetos e experiências na criação de APIs, e-commerces e SaaS." />
     <link rel="stylesheet" href="./assets/styles/stylenavbar.css">
     <title>Teste NavBar Responsiva</title>
