implementando portifolio responsivo com menu burguer

--- a/estudos/Portifolio Melhorado/testenavbar.html
+++ b/estudos/Portifolio Melhorado/testenavbar.html
@@ -112,7 +112,7 @@
         </a>
     </section>
 
-    <section class="formulario">
+    <section id="contact" class="formulario">
         <h3>Contact-me</h3>
         <form>
             <input class="inputs" type="text" placeholder="Your fully name">
