--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     
     <section id="home" class="apresentacao">
-        <img id="selfie" src="../../portifolio/assets/img/Selfie.jpg" alt="minha foto">
+        <img id="selfie" src="./portifolio/assets/img/Selfie.jpg" alt="minha foto">
         <section class="about">
             <h2>Hey, i'am João Moscardi</h2>
             <h3>Professional Fullstack Developer</h3>
