Criando o App de previsão do tempo e utilizando minha primeiri api no JS

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./previsao-tempo/index.html" aria-describedby="link projeto de previsão do tempo utilizando API's">
+            <h3>Weather Dev</h3>
+            <img class="projeto" src="./portifolio/assets/img/previsao.webp" alt="">
+        </a>
         <a href="./cafeteria/index.html" aria-describedby="link projeto cafeteria">
             <h3>CoffeShop</h3>
             <img class="projeto" src="./portifolio/assets/img/americano.jfif" alt="">
