alterções: linkando os projetos bootstrap no portifolio principal

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./portifolio-bootstrap/index.html" aria-describedby="link portifolio adicional feito com bootstrap 5">
+            <h3>Portifolio com Bootstrap 5</h3>
+            <img class="projeto" src="./portifolio/assets/img/Bootstrap_logo.svg.png" alt="">
+        </a>
+        <a href="./landing-page-bootstrap/index.html" aria-describedby="link projeto de landing page feito com bootstrap 5">
+            <h3>Landing page com Bootstrap 5</h3>
+            <img class="projeto" src="./portifolio/assets/img/image.png" alt="">
+        </a>
+        <a href="./tabela-usuarios-bootstrap/index.html" aria-describedby="link projeto de tabela de usuario feito com bootstrap 5">
+            <h3>Tabela de usuários com Bootstrap 5</h3>
+            <img class="projeto" src="./portifolio/assets/img/10754153.png" alt="">
+        </a>
         <a href="./previsao-tempo/index.html" aria-describedby="link projeto de previsão do tempo utilizando API's">
             <h3>Weather Dev</h3>
             <img class="projeto" src="./portifolio/assets/img/previsao.webp" alt="">
@@ -114,6 +126,7 @@
             <h3>Table Site</h3>
             <img class="projeto" src="./portifolio/assets/img/techfix.webp" alt="">
         </a>
+        
     </section>
 
     <section id="contact" class="formulario">
