Criando o formulário e painel/clone youtube com bootstrap

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             <h3>Portifolio com Bootstrap 5</h3>
             <img class="projeto" src="./portifolio/assets/img/Bootstrap_logo.svg.png" alt="">
         </a>
+        <a href="./painel-bootstrap/index.html" aria-describedby="link painel bootstrap/clone do youtube">
+            <h3>Painel Bootstrap/Clone Youtube</h3>
+            <img class="projeto" src="./portifolio/assets/img/painel_bootstrap.png" alt="">
+        </a>
+        <a href="./formulario-bootstrap/index.html" aria-describedby="link do formulario de contato feito com bootstrap 5">
+            <h3>Formulário com Bootstrap 5</h3>
+            <img class="projeto" src="./portifolio/assets/img/formulario_bootstrap.png" alt="">
+        </a>
         <a href="./landing-page-bootstrap/index.html" aria-describedby="link projeto de landing page feito com bootstrap 5">
             <h3>Landing page com Bootstrap 5</h3>
             <img class="projeto" src="./portifolio/assets/img/image.png" alt="">
