começando no JavaScript avançado e realizando o projeto sistema-escolar

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./sistema-escolar/index.html" aria-describedby="link projeto de login">
+            <h3>Sistema Escolar</h3>
+            <img class="projeto" src="./portifolio/assets/img/sistema-escolar.png" alt="">
+        </a>
         <a href="./portifolio-bootstrap/index.html" aria-describedby="link portifolio adicional feito com bootstrap 5">
             <h3>Portifolio com Bootstrap 5</h3>
             <img class="projeto" src="./portifolio/assets/img/Bootstrap_logo.svg.png" alt="">
