Craição do sistema de automação de luzes utilizando o padrão Singleton

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./automacao-luzes/index.html" aria-describedby="link projeto de automação de luzes">
+            <h3>Automação de Luzes</h3>
+            <img class="projeto" src="./portifolio/assets/img/sistema-luzes.jpg" alt="">
+        </a>
         <a href="./sistema-escolar/index.html" aria-describedby="link projeto de login">
             <h3>Sistema Escolar</h3>
             <img class="projeto" src="./portifolio/assets/img/sistema-escolar.png" alt="">
