--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./gerenciamento-usuarios-escola/index.html" aria-describedby="link projeto de automação de luzes">
+            <h3>Sistema de gerenciamento escolar</h3>
+            <img class="projeto" src="./portifolio/assets/img/gerenciamento-escolar.png" alt="">
+        </a>
+        <a href="./tarefas/index.html" aria-describedby="link projeto de lista de tarefas">
+            <h3>To-do List</h3>
+            <img class="projeto" src="./portifolio/assets/img/to-do-list.png" alt="">
+        </a>
         <a href="./automacao-luzes/index.html" aria-describedby="link projeto de automação de luzes">
             <h3>Automação de Luzes</h3>
             <img class="projeto" src="./portifolio/assets/img/sistema-luzes.jpg" alt="">
