--- a/gerenciamento-usuarios-escola/index.html
+++ b/gerenciamento-usuarios-escola/index.html
@@ -1,34 +1,73 @@
 <!DOCTYPE html>
-<html lang="pt-br" ng-app="app">
-<head>
-  <meta charset="UTF-8">
-  <title>Desafio 4 - JS Adv.</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/styles/style.css">
+<html lang="pt-br" ng-app="usersModule">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Gerenciamento de Usuários</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
 
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-</head>
-<body ng-controller="AppController" class="bg-light">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+  </head>
+  <body ng-controller="AppController" class="bg-light">
+    <h1 class="text-center text-dark mt-3 p-2">
+      Gerenciamento de Usuários Escolares
+    </h1>
+    <h3 class="text-center">Controle de alunos e professores</h3>
 
-  <div class="container mt-5 text-center">
-    <h1 class="mb-4" ng-bind="mensagem"></h1>
+    <div class="container my-4">
+      <!--Começo Filtros-->
 
-    <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
-      <p class="mb-2"><strong>Nome:</strong> <span ng-bind="usuario.nome"></span></p>
-      <p class="mb-3"><strong>Tipo:</strong> <span ng-bind="usuario.tipo"></span></p>
-
-      <div ng-if="usuario.tipo === 'Aluno'">
-        <img src="./assets/img/aluno.jpg" class="img-fluid rounded" alt="Aluno">
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <input
+            type="text"
+            ng-model="filtro"
+            class="form-control"
+            placeholder="Buscar usuários..."
+          />
+        </div>
+        <div class="col-md-6">
+          <select ng-model="filtroTipo" class="form-select">
+            <option value="">Todos</option>
+            <option value="Aluno">Alunos</option>
+            <option value="Professor">Professores</option>
+          </select>
+        </div>
       </div>
+      <!--Fim Filtros-->
 
-      <div ng-if="usuario.tipo === 'Professor'">
-        <img src="./assets/img/professor.jpg" class="img-fluid rounded" alt="Professor">
+      <!--Começo da tabela-->
+      <div class="table-responsive-sm">
+        <table
+          class="table table-sm table-dark table-hover table-striped table-bordered border-success text-center align-middle"
+        >
+          <thead class="table-dark">
+            <tr>
+              <th>Nome</th>
+              <th>Tipo</th>
+              <th>Data de Cadastro</th>
+            </tr>
+          </thead>
+          <tbody
+            ng-controller="UsuariosController"
+            class="table-group-divider"
+          >
+          <tr ng-repeat="usuario in usuarios | filter: filtro | filter: {tipo:filtroTipo}">
+            <td ng-bind="usuario.nome | uppercase"></td>
+            <td ng-bind="usuario.tipo"></td>
+            <td ng-bind="usuario.dataCadastro"></td>
+          </tr>
+            
+          </tbody>
+        </table>
+        <!--Fim da tabela-->
       </div>
     </div>
-  </div>
+    <!--Fim do container-->
 
-  <!-- App JS -->
-  <script src="./assets/js/app.js"></script>
-</body>
+    <script src="./assets/js/app.js"></script>
+  </body>
 </html>
