Adicionando a quantidade de usuários no sistema

--- a/gerenciamento-usuarios-escola/index.html
+++ b/gerenciamento-usuarios-escola/index.html
@@ -60,6 +60,10 @@
             <td ng-bind="usuario.tipo"></td>
             <td ng-bind="usuario.dataCadastro"></td>
           </tr>
+          <tr>
+            <th>Total de usuários</th>
+            <td class="text-left" colspan="2" ng-bind="usuarios.length"></td>
+          </tr>
             
           </tbody>
         </table>
