--- a/gerenciamento-usuarios-escola/index.html
+++ b/gerenciamento-usuarios-escola/index.html
@@ -7,11 +7,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="./assets/styles/style.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   </head>
   <body ng-controller="AppController" class="bg-light">
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+      }
+    </style>
     <h1 class="text-center text-dark mt-3 p-2">
       Gerenciamento de Usuários Escolares
     </h1>
@@ -44,34 +53,86 @@
         <table
           class="table table-sm table-dark table-hover table-striped table-bordered border-success text-center align-middle"
         >
+          <button type="button" class="btn btn-primary my-2 py-2 btn-add-user" data-bs-toggle="modal" data-bs-target="#addUserModal">
+            <span class="material-symbols-outlined"> add </span>
+            Add user
+          </button>
           <thead class="table-dark">
             <tr>
               <th>Nome</th>
               <th>Tipo</th>
               <th>Data de Cadastro</th>
+              <th>Ações</th>
             </tr>
           </thead>
-          <tbody
-            ng-controller="UsuariosController"
-            class="table-group-divider"
-          >
-          <tr ng-repeat="usuario in usuarios | filter: filtro | filter: {tipo:filtroTipo}">
-            <td ng-bind="usuario.nome | uppercase"></td>
-            <td ng-bind="usuario.tipo"></td>
-            <td ng-bind="usuario.dataCadastro"></td>
-          </tr>
-          <tr>
-            <th>Total de usuários</th>
-            <td class="text-left" colspan="2" ng-bind="usuarios.length"></td>
-          </tr>
-            
+          <tbody ng-controller="UsuariosController" class="table-group-divider">
+            <tr
+              ng-repeat="usuario in usuarios | filter: filtro | filter: {tipo:filtroTipo} | orderBy: 'nome'"
+            >
+              <td ng-bind="usuario.nome | uppercase"></td>
+              <td ng-bind="usuario.tipo"></td>
+              <td ng-bind="usuario.dataCadastro"></td>
+              <td>
+                <button type="button" class="btn btn-danger btn-delete-user w-100" ng-click="removeUser(usuario)">
+                  <span class="material-symbols-outlined">
+                    delete
+                  </span>
+                  Delete
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">Total de usuários</th>
+              <td class="text-left" colspan="2" ng-bind="usuarios.length"></td>
+            </tr>
           </tbody>
         </table>
         <!--Fim da tabela-->
+
+        <!--Ínicio do Modal-->
+        <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form ng-submit="addNewUser()">
+                  <div class="mb-3">
+                    <label for="recipient-name" class="col-form-label">Nome:</label>
+                    <input type="text" class="form-control" id="addUserModalName" ng-model="usuarioInput.nome" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="message-text" class="col-form-label">Tipo</label>
+                    <select  class="form-select" ng-model="usuarioInput.tipo" required>
+                      <option value="Aluno">Aluno</option>
+                      <option value="Professor">Professor</option>
+                    </select>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Salvar</button>
+                </form>
+              </div>
+              <div class="modal-footer">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--Fim do Modal-->
+
       </div>
     </div>
     <!--Fim do container-->
-
+    <script>
+      window.app = angular.module("usersModule", []);
+    </script>
+    <script src="./assets/js/usuario.service.js"></script>
     <script src="./assets/js/app.js"></script>
+    <!--Script do Bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
