--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <h2 class="myprojects">My Projects</h2>
 
     <section class="projects" id="projects">
+        <a href="./previsao-angular/index.html" aria-describedby="link projeto de previsão do tempo agora com Angular">
+            <h3>Previsão do tempo com Angular</h3>
+            <img class="projeto" src="./portifolio/assets/img/previsao.webp" alt="">
+        </a>
         <a href="./gerenciamento-usuarios-escola/index.html" aria-describedby="link projeto de automação de luzes">
             <h3>Sistema de gerenciamento escolar</h3>
             <img class="projeto" src="./portifolio/assets/img/gerenciamento-escolar.png" alt="">
